<resources>
    <string name="app_name">K&amp;P</string>
    <string name="start">Нажми, чтобы начать)</string>
    <string name="continue2">Продолжить</string>
    <string name="exit">Можешь уходить :)</string>
    <string name="three">3</string>
    <string name="her">она</string>
    <string name="it">оно</string>
    <string name="foth">4,3</string>
    <string name="him">он</string>
    <string name="thfo">3,4</string>
    <string name="fofo">4,4</string>
    <string name="answ">59</string>
    <string name="sixtt">60</string>
    <string name="A">A</string>
    <string name="M">M</string>
    <string name="H">H</string>
    <string name="nnine">21:00</string>
    <string name="ttwo">22:00</string>
    <string name="zz">20:00</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="twelve">12</string>
    <string name="eleven">11</string>
    <string name="ten">10</string>
    <string name="eight">8</string>
    <string name="six">6</string>
    <string name="river">речных</string>
    <string name="dry">сухих</string>
    <string name="white">белых</string>
    <string name="space">космическая</string>
    <string name="sea">морская</string>
    <string name="virus">пандоравирус</string>
    <string name="learn">уроки</string>
    <string name="durian">дуриан</string>
    <string name="carambola">карамбола</string>
    <string name="answer">ответ</string>
    <string name="five">5</string>
    <string name="nine">9</string>
    <string name="word">букварь</string>
    <string name="phone">телефон</string>
    <string name="window">зеркало</string>
    <string name="summa">сумма</string>
    <string name="zero">0</string>
    <string name="fourteen">40</string>
    <string name="twenty">20</string>
    <string name="twentyeight">28</string>
    <string name="boy">мальчик</string>
    <string name="girl">девочка</string>
    <string name="way">дорога</string>
    <string name="rivers">река</string>
    <string name="ferrum">поле</string>
    <string name="four">4</string>
    <string name="yc">У,С</string>
    <string name="bm">B,M</string>
    <string name="cm">C,M</string>
    <string name="trues">правда</string>
    <string name="falses">ложь</string>
    <string name="umnojenie">произведение</string>
    <string name="since">ждем обновлений</string>
    <string name="seven">7</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="end">Последний вопрос: У тебя есть телеграм?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="level3">3 уровень: можно ли зажечь спичку под водой?</string>
    <string name="end2">Тогда можешь смело нажимать на кнопку)</string>
    <string name="go">Нажми на текст</string>
    <string name="end3">К сожалению для тебя сюпризов нет, поэтому просто поздравляю с окончанием прохождения игры)</string>
    <string name="ehy">Ура</string>
    <string name="level2">2 уровень: сколько будет 2+2*2?</string>
    <string name="level4">4 уровень: Сколько месяцев в году имеют 28 дней?</string>
    <string name="level5">5 уровень: Каких камней в море нет?</string>
    <string name="level6">6 уровень: Какой болезнью на суше никто не болел?</string>
    <string name="level7">7 уровень: Что можно приготовить, но нельзя съесть?</string>
    <string name="level8">8 уровень: У семерых братьев по сестре. Сколько всего сестёр?</string>
    <string name="level9">9 уровень: Какая цифра уменьшится на треть, если её перевернуть?</string>
    <string name="level10">10 уровень: из какого слова из семи букв можно удалить одну "букву",чтобы осталось только две буквы?</string>
    <string name="level11">11 уровень: что больше : сумма всех цифр или их произведение?</string>
    <string name="level12">12 уровень: сколько яиц можно съесть натощак?</string>
    <string name="level13">13 уровень: 1+4=5 2+5=12 3+6=21 8+11=?</string>
    <string name="level14">14 уровень: ты мальчик или девочка?</string>
    <string name="level15">15 уровень: что идет через города и поля, но никогда не двигается?</string>
    <string name="level16"> 2  3  4  2  3  ?  какая цифра пропущена?</string>
    <string name="l16">16 уровень:</string>
    <string name="level17">17 уровень: Какие буквы должны стоять на месте знаков вопроса: Б ? ? Б М</string>
    <string name="level18">18 уровень: В космосе нет гравитации</string>
    <string name="level19">19 уровень: левое полушарие мозга отвечает за креативность, а правое - за логику</string>
    <string name="level20">20 уровень: 6636 — 3, 8118 — 4, 2242 — 0, 3316 — ?</string>
    <string name="level21">21 уровень: Жаба — 3, собака — 3, корова — 2, рыба — 0. А чему равняется кошка?</string>
    <string name="level22">22 уровень: 5 станков за 5 минут производят 5 деталей. За сколько минут 100 станков произведут 100 деталей?</string>
    <string name="level23">23 уровень: Он, он, она, он, она, …, оно. Что должно быть на месте пропуска? </string>
    <string name="level24">24 уровень: …, …, 3, 6, 4, 5, 4, 6, 6, 6, 11, 10. Какие два числа должны стоят в начале ряда? </string>
    <string name="level25">25 уровень: Профессор решил угостить друзей своим фирменным овощным салатом. Для этого ему понадобилось: перца — 3 штуки и столько же помидоров; огурцов меньше, чем помидоров, но больше, чем редисок. Сколько всего штук разных овощей использовал профессор в салате?</string>
    <string name="level26">26 уровень: Определите, какая буква скрывается под знаком вопроса:  Я, Ф, М, А, ? , И, И, А, С, О, Н, Д ? </string>
    <string name="level27">27 уровень: Сколько будет половина четверти одной десятой от 400?</string>
    <string name="level28">28 уровень: Если две машинистки набирают 2 страницы текста за 2 минуты, то сколько понадобится машинисток, чтобы набрать 18 страниц за 6 минут?</string>
    <string name="level29">29 уровень: Если бы сейчас было на два часа позже, то до полуночи оставалось бы в два раза меньше времени, чем если бы сейчас было на час позже. Сколько сейчас времени?</string>
    <string name="level30">30 уровень: В комнате 4 угла. В каждом углу сидит кошка. Напротив каждой кошки по 3 кошки. На хвосте каждой кошки по одной кошке. Сколько же всего кошек в комнате?  </string>
    <string name="level31">31 уровень: На озере растут кувшинки. Каждый день их количество увеличивается в 2 раза. Известно, что кувшинки полностью покроют всю поверхность озера за 60 дней. Сколько дней потребуется кувшинкам, чтобы покрыть половину озера?</string>
    <string name="_1">1 уровень : Сколько имён (без повторений) было указано в истории?</string>
</resources>