<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/levelmountain"
    tools:context=".Level16">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="75dp"
        android:layout_height="207dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="135dp"
        android:text="@string/level16"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button47"
        android:layout_width="145dp"
        android:layout_height="65dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="314dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="352dp"
        android:onClick="End"
        android:textColor="@color/black"
        android:text="@string/four"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button48"
        android:layout_width="139dp"
        android:layout_height="63dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="256dp"
        android:onClick="Go"
        android:textColor="@color/black"
        android:text="@string/five"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button47" />

    <Button
        android:id="@+id/button49"
        android:layout_width="131dp"
        android:layout_height="62dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="23dp"
        android:textColor="@color/black"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="170dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="End"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button48" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="141dp"
        android:layout_height="34dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="3dp"
        android:text="@string/l16"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>