<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/levelmountain"
    tools:context=".Level6">

    <Button
        android:id="@+id/button19"
        android:layout_width="178dp"
        android:layout_height="61dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="353dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="End"
        android:text="@string/virus"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="188dp"
        android:layout_height="68dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="128dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="End"
        android:text="@string/space"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="213dp"
        android:layout_height="104dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="135dp"
        android:text="@string/level6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button22"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="189dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="Go"
        android:text="@string/sea"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

</androidx.constraintlayout.widget.ConstraintLayout>