<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/levelspace"
    tools:context=".Level10">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="236dp"
        android:layout_height="148dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="135dp"
        android:text="@string/level10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white2"
        app:layout_constraintBottom_toTopOf="@+id/button31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button31"
        android:layout_width="173dp"
        android:layout_height="72dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="307dp"
        android:onClick="End"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button32"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="216dp"
        android:onClick="End"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/window"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button31" />

    <Button
        android:id="@+id/button33"
        android:layout_width="167dp"
        android:layout_height="66dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="125dp"
        android:onClick="Go"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

</androidx.constraintlayout.widget.ConstraintLayout>