<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/levelspace"
    tools:context=".Level13">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="127dp"
        android:layout_height="156dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="135dp"
        android:text="@string/level13"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white2"
        app:layout_constraintBottom_toTopOf="@+id/button37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button37"
        android:layout_width="159dp"
        android:layout_height="63dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="368dp"
        android:onClick="End"
        android:text="@string/twentyeight"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button38"
        android:layout_width="155dp"
        android:layout_height="63dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="263dp"
        android:onClick="End"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/twenty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button37" />

    <Button
        android:id="@+id/button41"
        android:layout_width="147dp"
        android:layout_height="60dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="174dp"
        android:text="@string/fourteen"
        android:onClick="Go"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button38" />
</androidx.constraintlayout.widget.ConstraintLayout>