<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/levelspace"
    tools:context=".Level12">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="115dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="85dp"
        android:text="@string/level12"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white2"
        app:layout_constraintBottom_toTopOf="@+id/button36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button36"
        android:layout_width="151dp"
        android:layout_height="74dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="388dp"
        android:onClick="Go"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button39"
        android:layout_width="142dp"
        android:layout_height="70dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="282dp"
        android:onClick="End"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button36" />

    <Button
        android:id="@+id/button40"
        android:layout_width="145dp"
        android:layout_height="71dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="178dp"
        android:onClick="End"
        android:text="@string/zero"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button39"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>