<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/levelspace"
    tools:context=".Level11">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="241dp"
        android:layout_height="136dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="135dp"
        android:text="@string/level11"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white2"
        app:layout_constraintBottom_toTopOf="@+id/button34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button34"
        android:layout_width="177dp"
        android:layout_height="76dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="327dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="328dp"
        android:onClick="Go"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/summa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button35"
        android:layout_width="188dp"
        android:layout_height="77dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="204dp"
        android:onClick="End"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/umnojenie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button34" />
</androidx.constraintlayout.widget.ConstraintLayout>